# src/controllers/account.controller.js
@@ -22,57 +22,6 @@ class AccountController {
     }
   }
 
-  async setTransferPassword(req, res, next) {
-    try {
-      const { accountNumber, transferPassword } = req.body;
-      const result = await accountService.setTransferPassword(accountNumber, transferPassword, req.user.id);
-      res.status(200).json(result);
-    } catch (error) {
-      next(error);
-    }
-  }
-
-  async changeTransferPassword(req, res, next) {
-    try {
-      const { accountNumber, old_transferPassword, new_transferPassword } = req.body;
-      const result = await accountService.changeTransferPassword(
-        accountNumber,
-        old_transferPassword,
-        new_transferPassword,
-        req.user.id
-      );
-      res.status(200).json(result);
-    } catch (error) {
-      next(error);
-    }
-  }
-
-  async verifyTransferPassword(req, res, next) {
-    try {
-      const { accountNumber } = req.body;
-      const result = await accountService.verifyTransferPassword(accountNumber, req.user.id);
-      res.status(200).json(result);
-    } catch (error) {
-      next(error);
-    }
-  }
-
-  async transfer(req, res, next) {
-    try {
-      const { fromAccountNumber, toAccountNumber, transferPassword, amount } = req.body;
-      const result = await accountService.transfer(
-        fromAccountNumber,
-        toAccountNumber,
-        transferPassword,
-        amount,
-        req.user.id
-      );
-      res.status(200).json(result);
-    } catch (error) {
-      next(error);
-    }
-  }
-
   async register(req, res, next) {
     try {
       const { name, cpf, phone, email, password } = req.body;
