# src/routes/account.routes.js
@@ -1,11 +1,6 @@
 const express = require("express");
 const accountController = require("../controllers/account.controller");
 const authenticateToken = require("../middlewares/auth.middleware");
-const {
-  validateSetTransferPassword,
-  validateChangeTransferPassword,
-  validateTransfer
-} = require("../validators/account.validator");
 
 const router = express.Router();
 
@@ -18,9 +13,5 @@ router.post("/login", accountController.login);
 router.use(authenticateToken);
 router.get("/:userId", accountController.getAccountByUserId);
 router.get("/:accountId/balance", accountController.getAccountBalance);
-router.post("/set_transfer_password", validateSetTransferPassword, accountController.setTransferPassword);
-router.post("/change_transfer_password", validateChangeTransferPassword, accountController.changeTransferPassword);
-router.post("/verify_transfer_password", accountController.verifyTransferPassword);
-router.post("/transfer", validateTransfer, accountController.transfer);
 
 module.exports = router;
